fixed night mode on mobile devices

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -296,6 +296,10 @@ body {
         margin-top: 3rem;
     }
 
+    .night-mode {
+        display: none;
+    }
+
     .night {
         display: block;
         position: absolute;
